# cratesProSearch

./: .env  .gitignore  Cargo.toml  README.md  llm_vs_cratesio_comparison.json  say.txt  search.md  search_comparison.json  search_comparison_llm_judged.json  search_comparison_results.json  search_raw_data.json
examples/: benchmark.rs  compare_search_methods.rs  compare_with_cratesio.rs  relevance_evaluation.rs  search_comparison.rs
resources/: stopwords.txt
src/: ai.rs  embedding.rs  lib.rs  main.rs  search.rs  search_prepare.rs
src/search/: core.rs  embedder.rs  mod.rs  rerank.rs  retrieve.rs  rewrite.rs  traditional_search.rs  utils.rs
tests/: rerank_test.rs  search_test.rs  test_rewrite_query.rs
