[package]
name = "cratespro-search"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
dotenv = "0.15"
pgvector = { version = "0.4", features = ["postgres"] }
prettytable = "0.10"  # 用于生成格式化表格
urlencoding = "2.1.0"

[[bin]]
name = "test_rewrite_query"
path = "tests/test_rewrite_query.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"